# mprpc

./: CMakeLists.txt  README.md  autobuild.sh
example/: friend.proto  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
src/: logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontraller.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontraller.h  rpcprovider.h  zookeeperutil.h
text/protobuf/: main.cc  test.proto
